--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -4,9 +4,6 @@
     font-family:'Courier New', Courier, monospace;
     box-sizing: border-box;
 }
-html{
-    scroll-behavior: smooth;
-}
 body{
     background-color: rgb(5, 4, 19);
 }
@@ -14,7 +11,6 @@ body{
     width: 100%;
     height: 13vh;
     background-color: rgb(12, 40, 64);
-    /* background-size: 50%; */
     background-position: right;
     background-repeat: no-repeat;
 }
@@ -44,6 +40,10 @@ nav ul li a{
     position: relative;
     font-size: 3vh;
 }
+
+nav ul li a:hover{
+    color: skyblue;
+}
 nav ul li a::after{
     content: '';
     width: 0;
@@ -63,21 +63,6 @@ nav ul li a:hover::after{
     background: rgb(181, 3, 205);
 }
 
-.header-text{
-    margin-top: 12%;
-    font-size: 30px;
-}
-
-
-.header-text h1{
-    font-size: 60px;
-    margin-top: 20px;
-}
-
-.header-text h1 span{
-    color: rgb(213, 10, 10);
-}
-
 /* Main part */
 .mainPart{
     margin-top: 10vh;
@@ -87,13 +72,12 @@ nav ul li a:hover::after{
     background-image: url('../files/bodyimg.jpg');
     background-position: center;
     height: 70vh;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 .mainPart .mainText{
     display: inline-block;
     margin-top: 10vh;
     padding: 3vh;
-    /* border: 2px solid white; */
     width: 32rem;
 }
 #heading p{
@@ -102,14 +86,20 @@ nav ul li a:hover::after{
     color: white;
 }
 #heading button{
-    padding: 10px;
-    margin-top: 30px;
+    padding: 9px;
+    margin-top: 15px;
     height: 6vh;
     width: 20vh;
     background-color: rgb(12,40,64);
     color: white;
     font-size: 20px;
-    border: 5px solid rgb(12,43,67);
     border-radius: 5px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    transition: 0.7s;
+}
+
+#heading button:hover{
+    background-color: white;
+    color: rgb(12,40,64);
+    transition: 0.7s;
 }
