--- a/css/login_page.css
+++ b/css/login_page.css
@@ -1,8 +1,8 @@
 *{
     margin: 0px;
     padding: 0px;
-    /* font-family:'Courier New', Courier, monospace;
-    box-sizing: border-box; */
+    font-family:'Courier New', Courier, monospace;
+    box-sizing: border-box;
 }
 body{
     background-color: rgb(5, 4, 19);
@@ -62,32 +62,58 @@ nav ul li a:hover::after{
     width: 100%;
     background: rgb(181, 3, 205);
 }
+.currentPage{
+    color: skyblue;
+}
+.currentPage::after{
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: skyblue;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 1.3s;
+}
 
-/* Main part */
-.mainPart{
-    margin-top: 10vh;
-    margin-left: 10vh;
-    margin-right: 10vh;
-    display: flex;
+/* Form Section */
+.form{
+    border: 3px solid black;
+    text-align: center;
     background-image: url('../files/bodyimg.jpg');
     background-position: center;
     height: 70vh;
-    border-radius: 8px;
-}
-.mainPart .mainText{
-    display: inline-block;
+    width: 70vh;
+    padding: 15px;
+    margin: auto;
     margin-top: 10vh;
-    padding: 3vh;
-    width: 32rem;
-}
-#heading p{
-    font-size: 50px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: x-large;
     color: white;
 }
-#heading button{
+.form h2{
+    margin-top: 5vh;
+    font-weight: 1100;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+input{
+    height: 5vh;
+    width: auto;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.input1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5vh;
+}
+form{
+    padding: 5vh;
+    display: flex;
+    flex-direction: column;
+}
+button{
     padding: 9px;
-    margin-top: 15px;
+    margin-top: 8vh;
     height: 6vh;
     width: 20vh;
     background-color: rgb(12,40,64);
@@ -98,7 +124,7 @@ nav ul li a:hover::after{
     transition: 0.7s;
 }
 
-#heading button:hover{
+button:hover{
     background-color: white;
     color: rgb(12,40,64);
     transition: 0.7s;
