--- a/css/login_page.css
+++ b/css/login_page.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(5, 4, 19);
-}
+    background-color: rgb(14, 12, 43);
+} 
 #header{
     width: 100%;
     height: 13vh;
@@ -78,7 +78,6 @@ nav ul li a:hover::after{
 
 /* Form Section */
 .form{
-    border: 3px solid black;
     text-align: center;
     background-image: url('../files/bodyimg.jpg');
     background-position: center;
@@ -89,6 +88,8 @@ nav ul li a:hover::after{
     margin-top: 10vh;
     font-size: x-large;
     color: white;
+    box-shadow: 10px 10px 100px  #0d20c6 ;
+    border-radius: 10px;
 }
 .form h2{
     margin-top: 5vh;
