--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -1,37 +1,45 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
-body{
+
+body {
     background-color: rgb(5, 4, 19);
+    /* background-image: url('../files/bodyimg.jpg'); */
 }
-#header{
+
+#header {
     width: 100%;
     height: 13vh;
     background-color: rgb(12, 40, 64);
     background-position: right;
     background-repeat: no-repeat;
 }
-.container{
+
+.container {
     padding: 15px 5%;
 }
-nav{
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.logo{
+
+
+.logo {
     width: 15rem;
 }
 
-nav ul li{
+nav ul li {
     display: inline-block;
     list-style: none;
-    margin: 20px 15px 15px ;
+    margin: 20px 15px 15px;
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -39,10 +47,20 @@ nav ul li a{
     font-size: 3vh;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     color: skyblue;
 }
-nav ul li a::after{
+
+#sidemenu{
+    /* width: 0vw; */
+    /* display: none; */
+    /* visibility: hidden; */
+    /* background-color: #93294d; */
+    /* display: none; */
+ 
+ }
+
+nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
@@ -52,53 +70,237 @@ nav ul li a::after{
     bottom: -6px;
     transition: 1.3s;
 }
-nav ul li a:hover::after{
-    
+
+nav ul li a:hover::after {
+
     width: 80%;
 }
-nav ul li a:hover::after{
+
+nav ul li a:hover::after {
     width: 100%;
     background: rgb(181, 3, 205);
+    background-position: left;
 }
 
 /* Main part */
-.mainPart{
-    margin-top: 10vh;
-    margin-left: 10vh;
-    margin-right: 10vh;
+.mainPart {
+    border: 5px solid black;
     display: flex;
     background-image: url('../files/bodyimg.jpg');
-    background-position: center;
-    height: 70vh;
-    border-radius: 10px;
-    box-shadow: 10px 10px 13px  #93294d ;
+    height: 75vh;
+    width: 97%;
+    margin-top: 5vh;
+    /* box-shadow: 10px 10px 13px 12px#93294d; */
+    box-shadow: 2px 3px 13px 8px #93294d;
 }
-.mainPart .mainText{
-    display: inline-block;
-    margin-top: 10vh;
-    padding: 3vh;
-    width: 32rem;
+.mainPart .leftSide{
+    padding: 2vh;
+    /* background-color: #93294d; */
+    border: 2px solid palevioletred;
+    width: 12vw;
+    display: flex;
+    flex-direction: column;
+    margin-top: 1.2vh;
 }
-#heading p{
-    font-size: 50px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+.mainPart .leftSide,form{
+    /* border: 3px solid rgb(14, 22, 179); */
+    display: flex;
+    flex-direction: column;
+    height: 68vh;
+    width: 21vw;
+    
+    border-radius: 1.2vh;
+}
+#sidemenuForm{
+    /* transition: 1s;
+    transition-property:visibilty;
+    transition-timing-function: ease-in-out; */
+    /* transition-duration: 1s; */
+    /* transition: cubic-bezier(0.075, 0.82, 0.165, 1); */
+}
+#closeIcon{
+    position: absolute;
+    left: 210px;
+}
+.mainPart .rightSide{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center;
+    text-align: center; */
+    width: 85vw;
+    align-items: center;
+    justify-content: center;
+}
+input{
+    height: 5vh;
+    width: inherit;
+    margin-bottom: 4vh;
+    border-radius: 10.2px;
+    background: transparent;
     color: white;
+    resize: none;
 }
-#heading button{
+textarea{
+    background: transparent;
+    width: inherit;
+    resize: none;
+    border-radius: 10.2px;
+}
+
+.rit{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+form{
+    /* margin-top: 4vh; */
+    width: inherit;
+}
+button{
+    cursor: pointer;
+}
+form button{
+    
+    padding: 9px;
+    margin-top: 8vh;
+    height: 6vh;
+    width: 65px;
+    margin-left: 10px;
+    background-color: rgb(12, 40, 64);
+    color: white;
+    font-size: 15px;
+    border-radius: 5px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    transition: 0.7s;
+}
+
+form button:hover {
+    background-color: white;
+    color: rgb(12, 40, 64);
+    transition: 0.7s;
+}
+
+.mainPart .mainText {
+    display: block;
+    margin-top: 1.6vh;
+    padding: 1vh;
+    width: 55vw;
+    /* border: 2px solid black; */
+    /* /* align-items: center; */
+    /* border: 2px solid black; */
+    align-items: center;
+    justify-content: center;
+    text-align: center; 
+}
+
+#heading p {
+    font-size: 3.5rem;
+    /* font-family:Georgia, 'Times New Roman', Times, serif; */
+    font-family: 'Roboto Slab', serif;
+    /* color: black; */
+    color: white;
+    /* color: black; */
+    text-align: center;
+
+}
+
+p#motto {
+    font-size: 1.2rem;
+    text-align: center;
+    color: white;
+    /* color: black; */
+}
+
+div.mainIcon {
+    margin-top: 10px;
+    text-align: center;
+    /* display: flex; */
+
+    align-items: center;
+    justify-content: center;
+    /* border: 2px solid black; */
+}
+
+.mainIcon img {
+    height: 35vh;
+    width: auto;
+    margin: auto;
+}
+.formButton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 9px;
     margin-top: 15px;
     height: 6vh;
     width: 20vh;
-    background-color: rgb(12,40,64);
+    background-color: rgb(12, 40, 64);
     color: white;
     font-size: 20px;
     border-radius: 5px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     transition: 0.7s;
 }
 
-#heading button:hover{
+ button:hover {
     background-color: white;
-    color: rgb(12,40,64);
+    color: rgb(12, 40, 64);
     transition: 0.7s;
 }
+/* Heading */
+.textJH{
+    margin-top: 30px;
+}
+.textJH h2{
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 3.5rem;
+    color: white;
+}
+/* Features */
+.features{
+    display: flex;
+    margin-top: 5vh;
+    justify-content: space-around;
+    padding: 8vh;
+    flex-wrap: wrap;
+}
+.featureBox{
+    height: 25vh;
+    box-shadow: 2px 3px 13px 8px #93294d;
+    width: 45vh;
+    /* text-align: center; */
+}
+
+
+
+.content{
+    display: flex;
+    flex-direction: column;
+}
+.featureBox .heading{
+    font-size: 4vh;
+    color: white;
+    margin-top: 1.4vh;
+}
+.featureBox .text{
+    font-size: 2.5vh;
+    color: white;
+    margin-top: 1.4vh;
+}
+
+.content{
+    padding: 2vh;
+}
+.content i{
+    font-size: 3rem;
+    color: white;
+    margin-top: 1vh;
+}
+
